--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
       line-height: 1.6;
-      color: #24292e;
+      color: #e6e6e6;
+      background-color: #05060a;
       max-width: 900px;
       margin: 0 auto;
       padding: 20px;
     }
     h1, h2, h3 {
-      border-bottom: 1px solid #eaecef;
+      border-bottom: 1px solid #333;
       padding-bottom: 0.3em;
+      color: #ffffff;
     }
     table {
       border-collapse: collapse;
@@ -23,13 +25,15 @@
       margin-bottom: 20px;
     }
     table, th, td {
-      border: 1px solid #dfe2e5;
+      border: 1px solid #333;
     }
     th, td {
       padding: 8px 12px;
+      background-color: #0b0c11;
+      color: #e6e6e6;
     }
     a {
-      color: #0366d6;
+      color: #4da3ff;
       text-decoration: none;
     }
     a:hover {
@@ -39,6 +43,7 @@
       margin: 20px 0;
     }
   </style>
+
 </head>
 <body>
   <!-- Your markdown content will be converted and placed here -->
