Add link to Mastodon profile in index.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       margin: 20px 0;
     }
   </style>
-
+<link rel="me" href="https://mastodon.social/@macromare">
 </head>
 <body>
   <!-- Your markdown content will be converted and placed here -->
